--- a/src/style.css
+++ b/src/style.css
@@ -48,9 +48,9 @@ body {
 .chart .picture {
   color: #999;
   font-size: 2em;
-  line-height: 1.5em;
+  line-height: 2.5em;
   z-index: 1;
-  max-width: 2em;
+  max-width: 2.5em;
   /*POSITION*/
   position: absolute;
   right: 5px;
@@ -59,6 +59,7 @@ body {
 
 .chart .picture .picture-img {
   max-width: 1.7em;
+  max-height: 1.7em;
   border-radius: 100px;
 }
 
@@ -108,7 +109,7 @@ body {
   font-family: Roboto;
   font-weight: bold;
   font-size: 2.1em;
-  line-height: 1em;
+  line-height: 1.5em;
   margin-right: 5px;
   margin-top: -5px;
 }
