--- a/src/style.scss
+++ b/src/style.scss
@@ -54,6 +54,7 @@ body {
 		max-width:2em;		
 		.picture-img{
 			max-width: 1.7em;
+			max-height: 1.7em;
 			border-radius:100px;
 		}
 		/*POSITION*/
@@ -107,7 +108,7 @@ body {
 			font-family: Roboto;
 			font-weight: bold;
 			font-size: 2.1em;
-			line-height: 1em;
+			line-height: 1.5em;
 			margin-right: 5px;
 			margin-top: -5px;
 		}
