--- a/src/style.scss
+++ b/src/style.scss
@@ -47,7 +47,7 @@ body {
 		overflow: hidden;
 	}
 	.picture {
-		color: $grey;
+		background-color: $grey;
 		font-size: 2em;
 		line-height: 1.5em;
 		z-index: 1;
